# exiftool-dll

./: .gitignore  .gitmodules  CMakeLists.txt  FatPacker.pm  README.md  bin2obj.c  build_lib.sh  build_perl.bat  exiftool.c  exiftool.h  hello_world.pl  loader.pl  test.c  version.rc
.github/workflows/: build.yml  sync-exiftool.yml
